// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.set.acceptance given: [case1] route.stone.set --as passed when: [t0] stone has artifact then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed (unguarded)
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.set.acceptance given: [case1] route.stone.set --as passed when: [t1] stone has no artifact then: stderr matches snapshot 1`] = `
"error: BadRequestError: artifact not found; run route.stone.get --stone 1.vision --say to see instructions

{
  "stone": "1.vision"
}
"
`;

exports[`driver.route.set.acceptance given: [case2] route.stone.set --as approved when: [t0] agent tries to approve then: stderr matches snapshot 1`] = `""`;

exports[`driver.route.set.acceptance given: [case2] route.stone.set --as approved when: [t0] agent tries to approve then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ ✗ only humans can approve
   │
   └─ as a driver, you should:
         ├─ \`--as passed\` to signal work complete, proceed
         ├─ \`--as arrived\` to signal work complete, request review
         └─ \`--as blocked\` to escalate if stuck
      
      the human will run \`--as approved\` when ready.
"
`;

exports[`driver.route.set.acceptance given: [case3] route.stone.set --as passed with guard (allowed) when: [t0] guarded stone with review + judge that pass then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed 0.0s
   └─ ✓ judge.1 - allowed 0.0s

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 1.test.md
   │  ├─ reviews
   │  │   └─ r1: echo "blockers: 0\\nnitpicks: 1\\ntest review content"
   │  │       ├─ finished 0.0s ✓
   │  │       ├─ review: .route/1.test.guard.review.i1.e2f8d2b5671b203b4a673b24f3772d3f6a7cac1669258302d777591e974dc82b.r1.md
   │  │       └─ 1 nitpick 🟠
   │  └─ judges
   │      └─ j1: echo "passed: true\\nreason: all checks passed"
   │          └─ finished 0.0s ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.set.acceptance given: [case4] route.stone.set --as passed with guard (blocked) when: [t0] guarded stone with review + judge that fail then: stderr matches snapshot 1`] = `
"
🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  passed: false
   │  │  reason: blockers exceed threshold (3 > 0)
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  └─
"
`;

exports[`driver.route.set.acceptance given: [case4] route.stone.set --as passed with guard (blocked) when: [t0] guarded stone with review + judge that fail then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed 0.0s
   └─ ✗ judge.1 - blocked 0.0s

🗿 route.stone.set
   ├─ stone = 2.blocked
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (3 > 0)
   └─ guard
      ├─ artifacts
      │   └─ 2.blocked.md
      ├─ reviews
      │   └─ r1: echo "blockers: 3\\nnitpicks: 1\\nreview with blockers"
      │       ├─ finished 0.0s ✓
      │       ├─ review: .route/2.blocked.guard.review.i1.017c9b4c5e71d0216f9140cf06d029c9f3dd492bb8128d136e39c2c3a617f3df.r1.md
      │       ├─ 3 blockers 🔴
      │       └─ 1 nitpick 🟠
      └─ judges
          └─ j1: echo "passed: false\\nreason: blockers exceed threshold (3 > 0)"
              ├─ finished 0.0s ✗
              └─ reason: blockers exceed threshold (3 > 0)
"
`;

exports[`driver.route.set.acceptance given: [case5] route.stone.set with flexible pattern lookup when: [t0] partial pattern matches single stone then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed (unguarded)
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.set.acceptance given: [case5] route.stone.set with flexible pattern lookup when: [t1] numeric prefix pattern agent approval locked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 2.criteria
   ├─ ✗ only humans can approve
   │
   └─ as a driver, you should:
         ├─ \`--as passed\` to signal work complete, proceed
         ├─ \`--as arrived\` to signal work complete, request review
         └─ \`--as blocked\` to escalate if stuck
      
      the human will run \`--as approved\` when ready.
"
`;

exports[`driver.route.set.acceptance given: [case6] route.stone.set with ambiguous pattern (failfast) when: [t0] pattern matches multiple stones then: stderr matches snapshot 1`] = `
"error: BadRequestError: pattern "." matched 3 stones; be more specific

{
  "pattern": ".",
  "matched": [
    "1.vision",
    "2.criteria",
    "3.plan"
  ]
}
"
`;

exports[`driver.route.set.acceptance given: [case7] route.stone.set --as passed with guard (cached) when: [t0] second run with same artifact reuses cached results then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed (cached)
   └─ ✓ judge.1 - allowed (cached)

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 1.test.md
   │  ├─ reviews
   │  │   └─ r1: echo "blockers: 0\\nnitpicks: 1\\ntest review content"
   │  │       └─ · cached
   │  │          └─ on $route/1.test*.md
   │  └─ judges
   │      └─ j1: echo "passed: true\\nreason: all checks passed"
   │          └─ · cached
   │             └─ on $route/1.test*.md
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.set.acceptance given: [case8] route.stone.set --as rewound when: [t0] rewind a single stone with guard artifacts then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ deleted: 1 reviews, 1 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.acceptance given: [case8] route.stone.set --as rewound when: [t1] cascade rewind affects subsequent stones then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 2.criteria
   ├─ cascade
   │  ├─ 2.criteria
   │  │  ├─ deleted: 1 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ deleted: 1 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.acceptance given: [case8] route.stone.set --as rewound when: [t2] rewind invalidates prior approval then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;

exports[`driver.route.set.acceptance given: [case8] route.stone.set --as rewound when: [t3] idempotent rewind (twice) then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ cascade
   │  ├─ 1.vision
   │  │  ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  ├─ 2.criteria
   │  │  ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │  │  └─ passage: rewound
   │  └─ 3.plan
   │     ├─ deleted: 0 reviews, 0 judges, 0 promises, 0 triggers
   │     └─ passage: rewound
   └─ done
"
`;
